force-app/main/default/objects/OpportunityLineItem/fields/Acres_1_Validation__c.field-meta.xml
<CustomField>
    <fullName>Acres_1_Validation__c</fullName>
    <description>Acres vs Parent Seed (Max:1.4, Min: 0.9)</description>
    <formula>IF(TEXT(Sales_Report_Type__c)!=&apos;Production Update 1&apos;,0,IF(OR(Prev_Parent__c=0,Area_Plantada__c=0),0,IF(Prev_Parent__c/Area_Plantada__c&lt;=1.4,IF(Prev_Parent__c/Area_Plantada__c&gt;=0.9,0,1),1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Acres vs Parent Seed (Max:1.4, Min: 0.9)

IF(TEXT(Sales_Report_Type__c)!=&apos;Production&apos;,0,IF(Prev_Parent__c=0,0,IF(Prev_Parent__c*1.4&gt;=Area_Plantada__c,IF(Prev_Parent__c*0.9&lt;=Area_Plantada__c,0,1),1)))</inlineHelpText>
    <label>Acres 1 Validation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>