force-app/main/default/objects/OpportunityLineItem/fields/Acres_All_Validation__c.field-meta.xml
<CustomField>
    <fullName>Acres_All_Validation__c</fullName>
    <description>New Acres vs Previous Reported Acres (Max:1.2, Min: 0.8)</description>
    <formula>IF(TEXT(Sales_Report_Type__c)=&apos;Production Update 1&apos;,0,IF(Prev_Acres__c=0,0,IF(Prev_Acres__c*1.2&gt;=Area_Plantada__c,IF(Prev_Acres__c*0.8&lt;=Area_Plantada__c,0,1),1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>New Acres vs Previous Reported Acres (Max:1.2, Min: 0.8)</inlineHelpText>
    <label>Acres All Validation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>