force-app/main/default/objects/OpportunityLineItem/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>New Soybean License Agreement w/Schedule A</fullName>
            </value>
            <value>
                <fullName>Addendum Schedule A only to SLA</fullName>
            </value>
            <value>
                <fullName>New Conv Soybean License Agreement w/Schedule A</fullName>
            </value>
            <value>
                <fullName>Addendum Schedule A only to CSL</fullName>
            </value>
            <value>
                <fullName>Material Testing Agreement (MTA)</fullName>
            </value>
            <value>
                <fullName>DONMARIO GrowPro Agreement</fullName>
            </value>
            <value>
                <fullName>Production Agreement</fullName>
                <isActive>false</isActive>
                <label>Production Agreement</label>
            </value>
            <value>
                <fullName>Virtue Production Use Agreement (PUA)</fullName>
                <isActive>false</isActive>
                <label>Virtue Production Use Agreement (PUA)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>