force-app/main/default/objects/OpportunityLineItem/fields/Amount_Sold__c.field-meta.xml
<CustomField>
    <fullName>Amount_Sold__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount Sold (by 140k)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>