force-app/main/default/objects/OpportunityLineItem/fields/Area_Plantada__c.field-meta.xml
<CustomField>
    <fullName>Area_Plantada__c</fullName>
    <inlineHelpText>Unit: Acres</inlineHelpText>
    <label>Production Acres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>