force-app/main/default/objects/OpportunityLineItem/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <description>Current balance of this product (Quantity - Amount sold - reservation sold)</description>
    <formula>Quantity_by_140k__c -  Amount_Sold__c -  Reservation_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current balance of this product</inlineHelpText>
    <label>Balance (by 140k)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>