force-app/main/default/objects/OpportunityLineItem/fields/BOL_Number__c.field-meta.xml
<CustomField>
    <fullName>BOL_Number__c</fullName>
    <inlineHelpText>Bill of Lading Number from SAP - Manual Entry</inlineHelpText>
    <label>BOL Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>