force-app/main/default/objects/OpportunityLineItem/fields/Bonificacion_Distribuidor__c.field-meta.xml
<CustomField>
    <fullName>Bonificacion_Distribuidor__c</fullName>
    <label>Bonificacion_distribuidor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>