force-app/main/default/objects/OpportunityLineItem/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <label>Licensee Brand Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>