force-app/main/default/objects/OpportunityLineItem/fields/Bushels_All_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bushels_All_Validation__c</fullName>
    <description>New Bushels vs Previous Reported Bushels (Max:1.2, Min: 0.8)</description>
    <formula>IF(TEXT(Sales_Report_Type__c)=&apos;Production Update 1&apos;,0,IF(Prev_Bushels__c=0,0,IF(Prev_Bushels__c*1.2&gt;=Semente_bruta__c,IF(Prev_Bushels__c*0.8&lt;=Semente_bruta__c,0,1),1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>New Bushels vs Previous Reported Bushels (Max:1.2, Min: 0.8)</inlineHelpText>
    <label>Bushels All Validation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>