force-app/main/default/objects/OpportunityLineItem/fields/Categoria_a_Rebaixar__c.field-meta.xml
<CustomField>
    <fullName>Categoria_a_Rebaixar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Categoria a Rebaixar</label>
    <referenceTo>Categoria__c</referenceTo>
    <relationshipLabel>Opportunity Product (Categoria a Rebaixar)</relationshipLabel>
    <relationshipName>Opportunity_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>