force-app/main/default/objects/OpportunityLineItem/fields/Centro_de_despacho__c.field-meta.xml
<CustomField>
    <fullName>Centro_de_despacho__c</fullName>
    <label>Plant</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Company__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>E001 - B&amp;B - CHAMPAIGN</fullName>
            </value>
            <value>
                <fullName>E002 - B&amp;B - GIBSON CITY</fullName>
            </value>
            <value>
                <fullName>E003 - B&amp;B - JONESBORO</fullName>
            </value>
            <value>
                <fullName>E004 – B&amp;B - PRO AG EARLY</fullName>
            </value>
            <value>
                <fullName>E004 – B&amp;B - PRO AG LATE</fullName>
            </value>
            <value>
                <fullName>U001 - GDM - CHAMPAIGN</fullName>
            </value>
            <value>
                <fullName>U002 - GDM - GIBSON CITY</fullName>
            </value>
            <value>
                <fullName>U003 - GDM - JONESBORO</fullName>
            </value>
            <value>
                <fullName>U004 - GDM - PRO AG EARLY</fullName>
            </value>
            <value>
                <fullName>U004 - GDM - PRO AG LATE</fullName>
            </value>
            <value>
                <fullName>U005 - GDM - HUTCHINSON</fullName>
            </value>
            <value>
                <fullName>U006 - GDM - DES MOINES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>