force-app/main/default/objects/OpportunityLineItem/fields/CM_Amount__c.field-meta.xml
<CustomField>
    <fullName>CM_Amount__c</fullName>
    <label>CM Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>