force-app/main/default/objects/OpportunityLineItem/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Order Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Company</valueSetName>
    </valueSet>
</CustomField>