force-app/main/default/objects/OpportunityLineItem/fields/Conditioned_Final_Validation__c.field-meta.xml
<CustomField>
    <fullName>Conditioned_Final_Validation__c</fullName>
    <description>New Supply vs Previous Reported Supply (Max:1.1, Min: 0)</description>
    <formula>IF(TEXT(Sales_Report_Type__c)!=&apos;Final Production Report&apos;,0,IF(Prev_Supply__c=0,0,IF(Prev_Supply__c*1.1&gt;=Semente_beneficiada__c,IF(Prev_Supply__c*0&lt;=Semente_beneficiada__c,0,1),1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>New Supply vs Previous Reported Supply (Max:1.1, Min: 0)</inlineHelpText>
    <label>Conditioned Final Validation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>