force-app/main/default/objects/OpportunityLineItem/fields/Contrato_relacionado__c.field-meta.xml
<CustomField>
    <fullName>Contrato_relacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato Relacionado</label>
    <referenceTo>Contrato__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>