force-app/main/default/objects/OpportunityLineItem/fields/CostOrder__c.field-meta.xml
<CustomField>
    <fullName>CostOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CostOrder</label>
    <referenceTo>Centro_de_CO_Item__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>