force-app/main/default/objects/OpportunityLineItem/fields/Cultivar_Number__c.field-meta.xml
<CustomField>
    <fullName>Cultivar_Number__c</fullName>
    <formula>PricebookEntry.Product2.Cultivar_Number__c</formula>
    <label>GDM Variety Number</label>
    <type>Text</type>
</CustomField>