force-app/main/default/objects/OpportunityLineItem/fields/Current_Sale_140k_Units__c.field-meta.xml
<CustomField>
    <fullName>Current_Sale_140k_Units__c</fullName>
    <label>Current Sale 140k Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>