force-app/main/default/objects/OpportunityLineItem/fields/Customer_ETA__c.field-meta.xml
<CustomField>
    <fullName>Customer_ETA__c</fullName>
    <label>Customer ETA</label>
    <length>30</length>
    <type>Text</type>
</CustomField>