force-app/main/default/objects/OpportunityLineItem/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <label>Customer Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>