force-app/main/default/objects/OpportunityLineItem/fields/Date_Dropped__c.field-meta.xml
<CustomField>
    <fullName>Date_Dropped__c</fullName>
    <label>Dropped Date</label>
    <type>Date</type>
</CustomField>