force-app/main/default/objects/OpportunityLineItem/fields/Date_Licensed__c.field-meta.xml
<CustomField>
    <fullName>Date_Licensed__c</fullName>
    <label>Date Licensed</label>
    <type>Date</type>
</CustomField>