force-app/main/default/objects/OpportunityLineItem/fields/Descarte__c.field-meta.xml
<CustomField>
    <fullName>Descarte__c</fullName>
    <description>Unit: Seeds Bushels discarted Production/Conditioning Reports</description>
    <inlineHelpText>Unit: Seeds Bushels discarted Production/Conditioning Reports</inlineHelpText>
    <label>Discard Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>