force-app/main/default/objects/OpportunityLineItem/fields/DocRel__c.field-meta.xml
<CustomField>
    <fullName>DocRel__c</fullName>
    <label>DocRel</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>