force-app/main/default/objects/OpportunityLineItem/fields/Estado_de_Produccion__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Produccion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planted Location</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Producto de oportunidad</relationshipLabel>
    <relationshipName>Producto_de_oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>