force-app/main/default/objects/OpportunityLineItem/fields/Fore_Range_Max_Qtty__c.field-meta.xml
<CustomField>
    <fullName>Fore_Range_Max_Qtty__c</fullName>
    <label>Forecast Range Max Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>