force-app/main/default/objects/OpportunityLineItem/fields/Fore_Range_Min_Qtty__c.field-meta.xml
<CustomField>
    <fullName>Fore_Range_Min_Qtty__c</fullName>
    <description>Used in Sales update 2 reports</description>
    <inlineHelpText>Used in Sales update 2 reports</inlineHelpText>
    <label>Forecast Range Min Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>