force-app/main/default/objects/OpportunityLineItem/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <label>Advancing line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not sure yet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>