force-app/main/default/objects/OpportunityLineItem/fields/Forecast_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Quantity__c</fullName>
    <label>Sales Forecast (140K)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>