force-app/main/default/objects/OpportunityLineItem/fields/Forecast_Validation__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Validation__c</fullName>
    <description>New Forecast vs Previous Reported Forecast (Max:1.2, Min: 0.8)</description>
    <formula>IF(TEXT(Sales_Report_Type__c)!=&apos;Sale&apos;,0,IF(Prev_Forecast__c=0,0,IF(Prev_Forecast__c*1.2&gt;=Forecast_Quantity__c,IF(Prev_Forecast__c*0.8&lt;=Forecast_Quantity__c,0,1),1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>New Forecast vs Previous Reported Forecast (Max:1.2, Min: 0.8)</inlineHelpText>
    <label>Forecast Validation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>