force-app/main/default/objects/OpportunityLineItem/fields/Freight_Charge__c.field-meta.xml
<CustomField>
    <fullName>Freight_Charge__c</fullName>
    <label>Freight Charge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Non Billable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>