force-app/main/default/objects/OpportunityLineItem/fields/Grupo_de_materiales_2__c.field-meta.xml
<CustomField>
    <fullName>Grupo_de_materiales_2__c</fullName>
    <label>Grupo de materiales 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>