force-app/main/default/objects/OpportunityLineItem/fields/Internal_ETA__c.field-meta.xml
<CustomField>
    <fullName>Internal_ETA__c</fullName>
    <label>Internal ETA</label>
    <length>30</length>
    <type>Text</type>
</CustomField>