force-app/main/default/objects/OpportunityLineItem/fields/Internal_Status__c.field-meta.xml
<CustomField>
    <fullName>Internal_Status__c</fullName>
    <label>Internal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In field</fullName>
            </value>
            <value>
                <fullName>In warehouse</fullName>
            </value>
            <value>
                <fullName>In transit</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>