force-app/main/default/objects/OpportunityLineItem/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <formula>IF(AND(Opportunity.RecordType.Name=&apos;Stock per plant&apos;, TEXT(PricebookEntry.Product2.Family)=&apos;Seed&apos;),Quantity_by_140k__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>