force-app/main/default/objects/OpportunityLineItem/fields/Licensee_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Brand_Name__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Licensee_Brand_Name__c)</formula>
    <label>Licensee Brand Name DO NOT USE</label>
    <type>Text</type>
</CustomField>