force-app/main/default/objects/OpportunityLineItem/fields/Licensee_Variety_Name__c.field-meta.xml
<CustomField>
    <fullName>Licensee_Variety_Name__c</fullName>
    <label>Licensee Variety ID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>