force-app/main/default/objects/OpportunityLineItem/fields/List_Royalty_Rate__c.field-meta.xml
<CustomField>
    <fullName>List_Royalty_Rate__c</fullName>
    <label>List Royalty Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>