force-app/main/default/objects/OpportunityLineItem/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>