force-app/main/default/objects/OpportunityLineItem/fields/Motivo_de_Rechazo__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Rechazo__c</fullName>
    <label>Rejection Reason</label>
    <length>40</length>
    <type>Text</type>
</CustomField>