force-app/main/default/objects/OpportunityLineItem/fields/Net_Trait_Royalty_Units__c.field-meta.xml
<CustomField>
    <fullName>Net_Trait_Royalty_Units__c</fullName>
    <label>Net Trait Royalty Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>