force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Product Id</label>
    <type>Text</type>
</CustomField>