force-app/main/default/objects/OpportunityLineItem/fields/Option_acres__c.field-meta.xml
<CustomField>
    <fullName>Option_acres__c</fullName>
    <description>Option Production Acres for DONMARIO July report</description>
    <inlineHelpText>Option Production Acres for July report</inlineHelpText>
    <label>Option acres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>