force-app/main/default/objects/OpportunityLineItem/fields/Packaging__c.field-meta.xml
<CustomField>
    <fullName>Packaging__c</fullName>
    <formula>CASE(PricebookEntry.Product2.UNIDADE__c,&quot;BAG 140K&quot;,&quot;140K&quot;,&quot;BAG 40(140K)&quot;,&quot;40@140K&quot;,&quot;LB&quot;,&quot;LB&quot;,&quot;BAGS BY LBS&quot;,&quot;BAGS BY LBS&quot;,&quot;N/A&quot;)</formula>
    <label>Packaging</label>
    <type>Text</type>
</CustomField>