force-app/main/default/objects/OpportunityLineItem/fields/Packaging_Type__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Type__c</fullName>
    <label>Preferred Packaging Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LBS</fullName>
            </value>
            <value>
                <fullName>140K</fullName>
            </value>
            <value>
                <fullName>BULK</fullName>
            </value>
            <value>
                <fullName>BUSHELS</fullName>
                <isActive>false</isActive>
                <label>BUSHELS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>