force-app/main/default/objects/OpportunityLineItem/fields/Pallet_Charge__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Charge__c</fullName>
    <label>Pallet Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>