force-app/main/default/objects/OpportunityLineItem/fields/Parend_Seed_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Parend_Seed_Purchases__c</fullName>
    <inlineHelpText>Unit:140k seeds Bag</inlineHelpText>
    <label>Parend Seed Purchases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>