force-app/main/default/objects/OpportunityLineItem/fields/Parent_Seed_Sale__c.field-meta.xml
<CustomField>
    <fullName>Parent_Seed_Sale__c</fullName>
    <formula>IF(TEXT(Opportunity.Type)=&apos;Z17 - PARENT SEED&apos;,Quantity_by_140k__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Seed Sale by 140k</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>