force-app/main/default/objects/OpportunityLineItem/fields/Planted_Locations__c.field-meta.xml
<CustomField>
    <fullName>Planted_Locations__c</fullName>
    <formula>Estado_de_Produccion__r.Name</formula>
    <label>Planted Locations</label>
    <type>Text</type>
</CustomField>