force-app/main/default/objects/OpportunityLineItem/fields/PRECIO_NETO__c.field-meta.xml
<CustomField>
    <fullName>PRECIO_NETO__c</fullName>
    <label>Precio Neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>