force-app/main/default/objects/OpportunityLineItem/fields/Prev_Acres__c.field-meta.xml
<CustomField>
    <fullName>Prev_Acres__c</fullName>
    <label>Prev Acres</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>