force-app/main/default/objects/OpportunityLineItem/fields/Prev_Bushels__c.field-meta.xml
<CustomField>
    <fullName>Prev_Bushels__c</fullName>
    <label>Prev Bushels</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>