force-app/main/default/objects/OpportunityLineItem/fields/Prev_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Prev_Forecast__c</fullName>
    <label>Prev Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>