force-app/main/default/objects/OpportunityLineItem/fields/Prev_Parent__c.field-meta.xml
<CustomField>
    <fullName>Prev_Parent__c</fullName>
    <label>Prev Parent Seed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>