force-app/main/default/objects/OpportunityLineItem/fields/Prev_Supply__c.field-meta.xml
<CustomField>
    <fullName>Prev_Supply__c</fullName>
    <label>Prev Supply</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>