force-app/main/default/objects/OpportunityLineItem/fields/Price_by_140K_value__c.field-meta.xml
<CustomField>
    <fullName>Price_by_140K_value__c</fullName>
    <label>Price by 140K value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>