force-app/main/default/objects/OpportunityLineItem/fields/Product_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Product_Purchased__c</fullName>
    <label>Wholesale IN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>