force-app/main/default/objects/OpportunityLineItem/fields/Product_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Product_Transferred__c</fullName>
    <label>Product Transferred (Units)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>