force-app/main/default/objects/OpportunityLineItem/fields/Purchases_by_140__c.field-meta.xml
<CustomField>
    <fullName>Purchases_by_140__c</fullName>
    <formula>CASE(Opportunity.RecordType.Name,&apos;Purchase&apos;,Quantity_by_140k__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchases by 140k</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>