force-app/main/default/objects/OpportunityLineItem/fields/Qty_x_Price__c.field-meta.xml
<CustomField>
    <fullName>Qty_x_Price__c</fullName>
    <description>Includes returned bags quantity</description>
    <formula>Price_by_140k__c * IF(Motivo_de_Rechazo__c==&apos;&apos;,(Quantity_by_140k__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Includes returned bags quantity</inlineHelpText>
    <label>Total Price (net)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>