force-app/main/default/objects/OpportunityLineItem/fields/Quantity_by_140k__c.field-meta.xml
<CustomField>
    <fullName>Quantity_by_140k__c</fullName>
    <description>,Quantity* NULLVALUE(Seed_per_pound__c, 0)/140000*VALUE(PricebookEntry.Product2.CANTIDAD_SUB_UNIDAD__c)</description>
    <formula>IF(AND(Motivo_de_Rechazo__c!=&apos;Z9&apos;,Motivo_de_Rechazo__c!=&apos;Z5&apos;,Motivo_de_Rechazo__c!=&apos;Z4&apos;),

  IF(TEXT(PricebookEntry.Product2.UNIDADE__c)=&apos;BAGS BY LBS&apos;,
    (Quantity-Returned_Quantity__c)/50*VALUE(PricebookEntry.Product2.CANTIDAD_SUB_UNIDAD__c),
    (Quantity-Returned_Quantity__c)/140*VALUE(PricebookEntry.Product2.CANTIDAD_SUB_UNIDAD__c)
    ),
  0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>IF(AND(Motivo_de_Rechazo__c!=&apos;Z3&apos;,Motivo_de_Rechazo__c!=&apos;Z5&apos;),

  IF(TEXT(PricebookEntry.Product2.UNIDADE__c)=&apos;BAGS BY LBS&apos;,
    (Quantity-Returned_Quantity__c)/50*VALUE(PricebookEntry.Product2.CANTIDAD_SUB_UNIDAD__c),
    (Quantity-Returned_Quantity__c)/140*VALUE(PricebookEntry.Product2.CANTIDAD_SUB_UNIDAD__c)
    ),
  0)</inlineHelpText>
    <label>Quantity by 140k</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>