force-app/main/default/objects/OpportunityLineItem/fields/Quantity_by_140k_value__c.field-meta.xml
<CustomField>
    <fullName>Quantity_by_140k_value__c</fullName>
    <description>Stores the value of the formula Quantity By 140K value in order to use is in Opportunity roll up summary fields</description>
    <inlineHelpText>Stores the value of the formula Quantity By 140K value in order to use is in Opportunity roll up summary fields</inlineHelpText>
    <label>Quantity by 140k value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>