force-app/main/default/objects/OpportunityLineItem/fields/Quantity_by_Pounds__c.field-meta.xml
<CustomField>
    <fullName>Quantity_by_Pounds__c</fullName>
    <description>Quantity/2.8*VALUE(PricebookEntry.Product2.CANTIDAD_SUB_UNIDAD__c)</description>
    <formula>IF(Motivo_de_Rechazo__c==&apos;&apos;,IF(TEXT(PricebookEntry.Product2.UNIDADE__c)=&apos;BAGS BY LBS&apos;
,(Quantity-Returned_Quantity__c)*VALUE(PricebookEntry.Product2.CANTIDAD_SUB_UNIDAD__c)
,(Quantity-Returned_Quantity__c)/2.8*VALUE(PricebookEntry.Product2.CANTIDAD_SUB_UNIDAD__c))
			,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantity/2.8*VALUE(PricebookEntry.Product2.CANTIDAD_SUB_UNIDAD__c)</inlineHelpText>
    <label>Quantity by Pounds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>