force-app/main/default/objects/OpportunityLineItem/fields/Report_Validation_Approved__c.field-meta.xml
<CustomField>
    <fullName>Report_Validation_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Varieties either approved or still needing approval</description>
    <label>Report Validation Approved</label>
    <type>Checkbox</type>
</CustomField>